# Comp371_Project

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Final_Project.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  References.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  project.vcxproj  project.vcxproj.filters
Debug/assets/shaders/: ground_fragment.glsl  textured_fragment.glsl  textured_vertex.glsl  vertexcolour_fragment.glsl
code/: CMakeLists.txt  README.md
code/assets/shaders/: shadow_geometry.glsl  textured_vertex.glsl
code/include/: CubeModel.h  GroundModel.h  Model.h  PlaneModel.h  QuadModel.h  SphereModel.h  shaderloader.h
code/src/: CubeModel.cpp  GroundModel.cpp  Light.h  Model.cpp  PlaneModel.cpp  QuadModel.cpp  SphereModel.cpp  drawFunctions.cpp  drawFunctions.h  geometricFunctions.cpp  geometricFunctions.h  project.cpp  projectAlex.cpp.orig  projectMarieme.cpp.orig
project.dir/Debug/: project.exe.recipe  project.ilk
project.dir/Debug/project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
visual studio/: ALL_BUILD.vcxproj  CMakeCache.txt  Final_Project.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  project.vcxproj  project.vcxproj.filters
visual studio/lib/Debug/: libglew32d.lib
visual studio/project.dir/Debug/: project.exe.recipe  project.ilk
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
(+24 files in other folders)
